package Enums;

public enum Role {
    BANDIT, POLICEMAN, COMMISSIONER, CITIZEN
}
